--- a/GoIT/markup/home/lesson7-8/index.html
+++ b/GoIT/markup/home/lesson7-8/index.html
@@ -7,6 +7,7 @@
 	<link  rel="stylesheet"  href="css/style.css">		
 </head>
 <body>
+	<div class="wrapper">
 	<div class="wrapper one">
       <header>
            <a href="#" class="logo"></a>
@@ -31,6 +32,31 @@
      	<p>
      	  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum error nobis illo doloribus. Numquam necessitatibus facilis sint ullam. Natus vitae consequuntur aspernatur, minima, laboriosam officiis eos animi corrupti quia perferendis.
      	</p>
+     	<li class="menu_item">
+     	    <a href="#" class="menu_link">READ MORE</a>
+     	</li>
+     </article>
+       <article>
+     	<h3>
+     	  ABOUT OUR COMPANY
+     	</h3>
+     	<p>
+     	  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum error nobis illo doloribus. Numquam necessitatibus facilis sint ullam. Natus vitae consequuntur aspernatur, minima, laboriosam officiis eos animi corrupti quia perferendis.
+     	</p>
+     	<li class="menu_item">
+     	    <a href="#" class="menu_link">READ MORE</a>
+     	</li>
+     </article>
+       <article>
+     	<h3>
+     	  ABOUT OUR COMPANY
+     	</h3>
+     	<p>
+     	  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum error nobis illo doloribus. Numquam necessitatibus facilis sint ullam. Natus vitae consequuntur aspernatur, minima, laboriosam officiis eos animi corrupti quia perferendis.
+     	</p>
+     	<li class="menu_item">
+     	    <a href="#" class="menu_link">READ MORE</a>
+     	</li>
      </article>
      </div>
 
@@ -56,6 +82,6 @@
      <span>Designed by Pingbull AS</span>
 
     </div>
-		
+	</div>
 </body>
 </html>
