add company icons

--- a/GoIT/markup/home/lesson6/index.html
+++ b/GoIT/markup/home/lesson6/index.html
@@ -100,7 +100,7 @@
 			<li><a href="#"><span>Наименование 1</span></a></li>
 			<li><a href="#"><span>Наименование 2</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
-			<li><a href="#"><span>Наименование 3</span></a></li>
+			<li><a href="#"><span>Наименование 4</span></a></li>
 		</ul>
 		<div class="icon">
 			<span>ДИСКИ</span>
@@ -109,7 +109,7 @@
 			<li><a href="#"><span>Наименование 1</span></a></li>
 			<li><a href="#"><span>Наименование 2</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
-			<li><a href="#"><span>Наименование 3</span></a></li>
+			<li><a href="#"><span>Наименование 4</span></a></li>
 		</ul>
 		<div class="icon">
 			<span>БОЛТЫ</span>
@@ -118,7 +118,7 @@
 			<li><a href="#"><span>Наименование 1</span></a></li>
 			<li><a href="#"><span>Наименование 2</span></a></li>
 			<li><a href="#"><span>Наименование 3</span></a></li>
-			<li><a href="#"><span>Наименование 3</span></a></li>
+			<li><a href="#"><span>Наименование 4</span></a></li>
 		</ul>
 	</aside>
 
@@ -182,7 +182,9 @@
 
 	<aside>
 		<div class="icone_list">
-			<span>БРЕНДЫ:</span>
+			<span>
+			  БРЕНДЫ:
+			</span>
 		</div>
 		<form action="#" method="POST">
 			<div class="icon">
@@ -198,7 +200,9 @@
             </div>
 
 			<div class="icon">
-				<span>ДИСКИ</span>
+				<span>
+				  ДИСКИ
+				</span>
 			</div>
 
 			 <div class="brands">
@@ -209,14 +213,31 @@
 
 		</form>
 		 <div>
-			 	<button class="btn"><span>ВЫБРАТЬ</span></button>
+			 	<button class="btn">
+			 	  <span>
+			 	    ВЫБРАТЬ
+			 	  </span>
+			 	</button>
 		 </div>
 	</aside>
 			 
 </div>
-<div class="footer_photo"></div>
-	<footer>
 
+	
+	  <section class="photo_line">
+	    <ul>
+	    	<li><a href="#"><img src="img/icone_footer_avon.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_bridge.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_continental.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_dunlop.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_factory.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_per.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_pirelli.png" alt="brand icon"></a></li>
+	    	<li><a href="#"><img src="img/icone_footer_toyo.png" alt="brand icon"></a></li>
+	    </ul>
+	  	  
+	  </section>
+<footer>
 		<nav class="footer_menu clearfix">
 			<ul>
 				<li><a href="#">О компании</a></li>
